--- a/index.css
+++ b/index.css
@@ -1,6 +1,34 @@
 /* Oppgavesett 4 */
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: sans-serif;
+}
+
+
+footer {
+    display: grid;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(17, 17, 17, 0.082);
+    width: 100%;
+    color: black;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Index */
+#oppgavesett {
+    width:100%;
+    min-height: 100vh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
 }
 
 /* Oppgave 4 */
