--- a/index.css
+++ b/index.css
@@ -81,5 +81,58 @@ footer {
     color: red;
     font-weight: 700;
 }
-/* Oppgave 9 */
+
 /* Oppgave 10 */
+#oppgave10 {
+    width: 350px;
+    height: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    
+}
+
+#oppgave10 div {
+    position: absolute;
+    width: 2px;
+    height: 4px;
+    background-color: black;
+    transform-origin: center bottom;
+    text-align: center;
+    bottom: 50%;
+    
+}
+
+/*
+#oppgave10 div:nth-child(15n+1) {
+    width: 4px;
+    height: 7px;
+}
+*/
+
+#oppgave10 div.tjukk {
+    width: 4px;
+    height: 7px;
+}
+
+#oppgave10 div.t {
+    width: 40px;
+    background-color: transparent;
+}
+
+#oppgave10 .tall {
+    display: inline-block;
+    text-align: center;
+}
+
+#sekundviser {
+    width: 4px;
+    height: 150px;
+    background-color: orange;
+    position: absolute;
+    bottom: 50%;
+    transform-origin: center bottom;
+
+    
+}
